# RAG-system

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  rag.py  requirements.txt
app/: main.py  rag.py
app/data/no_hope/the_shadow_inside/: I'm_Lost.txt  I_Don't_Deserve_It.txt  The_Imposter.txt
app/data/ruben_du_pon/: Are_You_Fucking_Kidding_Me.txt  Little_Bird.txt  The_Lovers.txt
data/no_hope/: No_Redemption.txt
data/ruben_du_pon/: Not_Enough.txt
test_llm/: Dockerfile  llm_test.py
