[project]
name = "rag-systeem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "chromadb>=1.5.7",
    "fastapi[standard]>=0.135.3",
    "llama-index>=0.14.20",
    "llama-index-embeddings-huggingface>=0.7.0",
    "sentence-transformers>=5.4.0",
]
[tool.fastapi]
entrypoint = "main:app"
[tool.black]
line-length = 79
